Fix angle card too much for scrolling problem

--- a/javascript/example/player-style.css
+++ b/javascript/example/player-style.css
@@ -332,7 +332,7 @@ video {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  z-index: 1000;
+  z-index: -1;
   opacity: 0;
   justify-content: space-between;
   transition: opacity 0.5s ease, transform 0.5s ease;
