--- a/javascript/example/styles.css
+++ b/javascript/example/styles.css
@@ -333,7 +333,6 @@ input:focus {
     cursor: pointer;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 .angles, .duration, .close {
